Moved some lists to Java 12